--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "type": "module",
   "dependencies": {
+    "bits-ui": "^0.21.16",
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.3",
     "tailwind-variants": "^0.2.1"
