feat: Add basic post frontend

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "bits-ui": "^0.21.16",
     "clsx": "^2.1.1",
+    "lucide-svelte": "^0.451.0",
     "tailwind-merge": "^2.5.3",
     "tailwind-variants": "^0.2.1"
   }
