--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@fontsource/inter": "^5.1.0",
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.3",
     "tailwind-variants": "^0.2.1"
